# Skoutt-Ai

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
config/: config.example.toml  seed_exhibitions.toml
config/email_templates/: followup_1.hbs  followup_2.hbs  followup_3.hbs  initial_outreach.hbs
python/: __init__.py  requirements.txt
python/analytics/: __init__.py  performance.py  visualizer.py
python/enrichment/: __init__.py  apollo.py  enricher.py  hunter.py
python/intelligence/: __init__.py  crawl4ai_scraper.py  sentiment.py  timing.py
src/: lib.rs  main.rs
src/database/: mod.rs  schema.sql
src/enrichment/: apollo_client.rs  hunter_client.rs  mod.rs
src/intelligence/: agentic_researcher.rs  chat.rs  company_researcher.rs  deep_researcher.rs  email_personalizer.rs  mod.rs  reply_analyzer.rs  research_synthesizer.rs
src/outreach/: email_drafter.rs  email_sender.rs  followup_scheduler.rs  mod.rs  reply_monitor.rs
src/python_bridge/: analytics_bridge.rs  crawl4ai_bridge.rs  enrichment_bridge.rs  mod.rs
src/scraping/: company_scraper.rs  exhibition_finder.rs  exhibitor_extractor.rs  fallback_strategies.rs  mod.rs
src/survival/: alert_system.rs  metrics_tracker.rs  mod.rs  shutdown_manager.rs
