[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "skoutt"
version = "0.1.0"
description = "Survival-driven lead generation agent for Track Exhibits Pvt LTD"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
